--- a/DiscordSlash/DiscordSlash.csproj
+++ b/DiscordSlash/DiscordSlash.csproj
@@ -32,4 +32,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
