--- a/Backend/DiscordSlash/DiscordSlash.csproj
+++ b/Backend/DiscordSlash/DiscordSlash.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,24 +8,16 @@
   <ItemGroup>
     <PackageReference Include="AspNet.Security.OAuth.Discord" Version="6.0.0" />
     <PackageReference Include="AspNetCoreRateLimit" Version="4.0.1" />
-    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01044" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0-nightly-01044" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-01044" />
-    <PackageReference Include="DSharpPlus.Lavalink" Version="4.2.0-nightly-01044" />
-    <PackageReference Include="DSharpPlus.Rest" Version="4.2.0-nightly-01044" />
-    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0-nightly-01044" />
-    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
+    <PackageReference Include="Discord.Addons.Hosting" Version="4.0.3-labs" />
+    <PackageReference Include="Discord.Net.Labs" Version="3.3.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
     <PackageReference Include="RestSharp" Version="106.13.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
   </ItemGroup>
 
   <ItemGroup>
