--- a/Backend/DiscordSlash/DexterSlash.csproj
+++ b/Backend/DiscordSlash/DexterSlash.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
     <PackageReference Include="RestSharp" Version="106.13.0" />
+    <PackageReference Include="Scrutor" Version="3.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Victoria" Version="6.0.1119" />
   </ItemGroup>
