Changed way events are generated.

--- a/Backend/NuGet.config
+++ b/Backend/NuGet.config
@@ -1,8 +1,8 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="DiscordNet Labs" value="https://www.myget.org/F/discord-net-labs/api/v3/index.json" />
     <add key="Victoria" value="https://www.myget.org/F/yucked/api/v3/index.json" />
-    <add key="Slash Commands" value="https://www.myget.org/F/cenngo/api/v3/index.json" />
   </packageSources>
 </configuration>
