--- a/Backend/.editorconfig
+++ b/Backend/.editorconfig
@@ -2,3 +2,6 @@
 
 # CA2254: Template should be a static expression
 dotnet_diagnostic.CA2254.severity = none
+
+# CS1998: Async method lacks 'await' operators and will run synchronously
+dotnet_diagnostic.CS1998.severity = none
