--- a/Backend/DiscordSlash/DexterSlash.csproj
+++ b/Backend/DiscordSlash/DexterSlash.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AspNet.Security.OAuth.Discord" Version="6.0.0" />
     <PackageReference Include="AspNetCoreRateLimit" Version="4.0.1" />
     <PackageReference Include="Discord.Net.Labs" Version="3.4.7" />
+    <PackageReference Include="Fergun.Interactive.Labs" Version="1.3.0-dev2" />
     <PackageReference Include="Genbox.WolframAlpha" Version="3.0.0-alpha3" />
     <PackageReference Include="Humanizer" Version="2.13.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
@@ -18,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
     <PackageReference Include="RestSharp" Version="106.13.0" />
+    <PackageReference Include="SpotifyAPI.Web" Version="6.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Victoria" Version="6.0.1119" />
   </ItemGroup>
