--- a/Backend/DiscordSlash/DexterSlash.csproj
+++ b/Backend/DiscordSlash/DexterSlash.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Discord.Net.Labs" Version="3.4.7" />
     <PackageReference Include="Fergun.Interactive.Labs" Version="1.3.0-dev2" />
     <PackageReference Include="Genbox.WolframAlpha" Version="3.0.0-alpha3" />
+    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.55.0.2449" />
     <PackageReference Include="Humanizer" Version="2.13.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
