--- a/DexterSlash/DexterSlash.csproj
+++ b/DexterSlash/DexterSlash.csproj
@@ -6,10 +6,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AspNet.Security.OAuth.Discord" Version="6.0.0" />
+	  <_WebToolingArtifacts Remove="Properties\launchSettings (1).json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Properties\launchSettings (1).json" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="AspNet.Security.OAuth.Discord" Version="6.0.1" />
 		<PackageReference Include="CoreAdmin" Version="2.0.0" />
-		<PackageReference Include="Discord.Net.Labs" Version="3.4.7" />
-		<PackageReference Include="Fergun.Interactive.Labs" Version="1.3.0-dev2" />
+		<PackageReference Include="Discord.Net.Labs" Version="3.4.9" />
+		<PackageReference Include="Fergun.Interactive.Labs" Version="1.3.0-dev3" />
 		<PackageReference Include="Figgle" Version="0.4.0" />
 		<PackageReference Include="Genbox.WolframAlpha" Version="3.0.0-alpha3" />
 		<PackageReference Include="Google.Apis.YouTube.v3" Version="1.55.0.2449" />
